# GUIControl

./: .gitignore  README.md  README_EN.md  background_optimization.py  main.py  pyproject.toml  setup.py  test.py  test_logger.py
GenshinImpactControl/: README.md  main.py
GestureMouseControl/: README.md  main.py
data/: hand_landmarks.npy
utils/: gui_utils.py  hgr_utils.py  logger.py
