[project]
name = "GUIControl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cx-freeze>=8.5.0",
    "keyboard>=0.13.5",
    "loguru>=0.7.3",
    "mediapipe>=0.10.21",
    "mido>=1.3.3",
    "opencv-python>=4.11.0.86",
    "psutil>=7.1.3",
    "pygetwindow>=0.0.9",
    "pynput>=1.8.1",
    "pywin32>=311",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true
